# FEDOT

./: .codecov.yml  .env.example  .gitignore  .pep8speaks.yml  .readthedocs.yml  .swp  .travis.yml  Analyze Dataset.ipynb  Dockerfile  Dockerfile_light  FEDOT vs SKLEARN.ipynb  LICENSE.md  MANIFEST.in  README.md  README.rst  README.txt  README_en.rst  Untitled.ipynb  b_requirements.txt  contributing.md  creditcard_fraud_detection.py  custom_test.py  custom_test_tuning.py  dataset_test.ipynb  extra_requirements.txt  knn_fit.prof  knn_fit_1.prof  light_requirements.txt  model_repositiry.json  multi_task.py  old_setup.py  online.py  over_and_underSample_Compare.ipynb  plt_mod.py  profile_test.ipynb  pyflux debug.ipynb  pyproject.toml  pytest.ini  regression_with_lgbm.py  requirements-gpu.txt  (+20 more)
.codex/: skills-smoke-suite.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.rst
.ipynb_checkpoints/: model_repositiry-checkpoint.json  pyflux debug-checkpoint.ipynb  pyflux_models_eval-checkpoint.py
benchmark/: benchmark_model_types.py  benchmark_utils.py  executor.py  requirements.txt
cases/: arctic_ssh_custom.py  austr.py  basic_classification_problem.py  check_tuning_efficiency.py  credit_scoring_problem.py  credit_scoring_problem_multiobj.py  creditcard_fraud_detection.py  dataset_preparation.py  equation_disovery.py  gecco.py  grasp_robustness_problem.py  image_classification_problem.py  image_recognitation_problem.py  kc2_sourcecode_defects_classification.py  lstm_forecasting_problem.py  mergefig.py  metocean_forecasting_problem.py  oil.py  (+32 more)
(+6430 files in other folders)
